@@ -12,6 +12,7 @@ import org.example.weneedbe.domain.user.domain.UserArticle;
 import org.example.weneedbe.domain.user.dto.request.EditMyInfoRequest;
 import org.example.weneedbe.domain.user.dto.request.UserInfoRequest;
 import org.example.weneedbe.domain.user.dto.response.UserInfoResponse;
+import org.example.weneedbe.domain.user.dto.response.mypage.BasicInfoResponse;
 import org.example.weneedbe.domain.user.dto.response.mypage.MyPageArticleInfoResponse;
 import org.example.weneedbe.domain.user.dto.response.mypage.EditMyInfoResponse;
 import org.example.weneedbe.domain.user.dto.response.mypage.GetMyInfoResponse;
@@ -24,10 +25,10 @@ import org.example.weneedbe.global.s3.application.S3Service;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -40,21 +41,12 @@ public class UserService {
     private final ArticleLikeRepository articleLikeRepository;
     private final S3Service s3Service;
     private final UserArticleRepository userArticleRepository;
+
     public Boolean checkNicknameDuplicate(String nickName) {
         return userRepository.existsByNickname(nickName);
     }
 
-    public User findById(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(IllegalArgumentException::new);
-    }
-
-    public User findByEmail(String email) {
-        return userRepository.findByEmail(email)
-                .orElseThrow(IllegalArgumentException::new);
-    }
-
-    public ResponseEntity<UserInfoResponse> setUserInfo(UserInfoRequest request, String authorizationHeader) throws Exception {
+    public ResponseEntity<UserInfoResponse> setInfo(UserInfoRequest request, String authorizationHeader) throws Exception {
         Long userId = getUserIdFromHeader(authorizationHeader);
         User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
         try {
@@ -73,14 +65,27 @@ public class UserService {
         return new ResponseEntity<>(new UserInfoResponse(true, "상세 정보 입력 성공"), HttpStatus.OK);
     }
 
-    public GetMyInfoResponse getMyInfo(String authorizationHeader) {
-        Long userId = getUserIdFromHeader(authorizationHeader);
-        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
-
-        return GetMyInfoResponse.from(user);
+    @Transactional
+    public BasicInfoResponse getBasicInfo(String authorizationHeader, Long userId, Type articleType) {
+        Long userIdFromHeader = getUserIdFromHeader(authorizationHeader);
+        String userNickname = userRepository.findById(userIdFromHeader).orElseThrow(UserNotFoundException::new).getNickname();
+        if (userIdFromHeader.equals(userId)) {
+            // '로그인한 사용자'의 정보 + MyOutput 노출
+            return setBasicInfoResponse(userNickname, true, userIdFromHeader, articleType);
+        }
+        // 주어진 userId의 사용자 정보 + MyOutput 노출
+        return setBasicInfoResponse(userNickname, false, userId, articleType);
     }
 
-    public EditMyInfoResponse editMyInfo(String authorizationHeader, MultipartFile profileImage, EditMyInfoRequest request) throws IOException{
+    private BasicInfoResponse setBasicInfoResponse(String userNickname, Boolean sameUser, Long userId, Type articleType) {
+        User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        GetMyInfoResponse userInfo = GetMyInfoResponse.from(user);
+        List<MyPageArticleInfoResponse> myOutputList =  getOutputFromUser(user, articleType);
+
+        return BasicInfoResponse.of(userNickname, sameUser, userInfo, myOutputList);
+    }
+
+    public EditMyInfoResponse editInfo(String authorizationHeader, MultipartFile profileImage, EditMyInfoRequest request) throws IOException{
         Long userId = getUserIdFromHeader(authorizationHeader);
         User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
 
@@ -117,13 +122,17 @@ public class UserService {
             return new MyPageArticleInfoResponse(s.getArticle(),
                     articleLikeRepository.countByArticle(s.getArticle()),
                     teamProfiles);
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    public List<MyPageArticleInfoResponse> getMyInfo(String authorizationHeader, Type articleType) {
+    public List<MyPageArticleInfoResponse> getArticleInfo(String authorizationHeader, Type articleType) {
         Long userId = getUserIdFromHeader(authorizationHeader);
         User user = userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
 
+        return getOutputFromUser(user, articleType);
+    }
+
+    public List<MyPageArticleInfoResponse> getOutputFromUser(User user, Type articleType) {
         List<UserArticle> myArticles = userArticleRepository.findAllByUserAndArticle_ArticleTypeOrderByArticle_CreatedAtDesc(
                 user, articleType);
 
@@ -133,7 +142,7 @@ public class UserService {
             return new MyPageArticleInfoResponse(s.getArticle(),
                     articleLikeRepository.countByArticle(s.getArticle()),
                     teamProfiles);
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     // UserArticle 테이블에서 동일한 articleId에 속한 사용자들의 프로필 url을 List<String> 으로 반환하는 메서드
@@ -141,7 +150,7 @@ public class UserService {
         return userArticleRepository.findAllByArticle_ArticleId(articleId)
                 .stream()
                 .map(userArticle -> userArticle.getUser().getProfile())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Long getUserIdFromHeader(String authorizationHeader) {
